<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_settings"
        layout="@layout/toolbar" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:orientation="vertical">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_pname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/prescrption"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                />

            <TextView
                android:id="@+id/text_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/prescrption"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                />

            <TextView
                android:id="@+id/text_psex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/prescrption"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                 />
        </LinearLayout>
    </android.support.v7.widget.CardView>


   <!-- <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gainsboro" />-->

    <android.support.v7.widget.CardView

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="25dp"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp">

        <TextView
            android:id="@+id/text_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="20dp"
            />
    </android.support.v7.widget.CardView>
</LinearLayout>
</ScrollView>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:splitMotionEvents="false"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:layout_margin="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textSize="14dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:splitMotionEvents="false"
            android:weightSum="2">

            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:background="@drawable/button_bg_blue"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="@dimen/button_min_height"
                android:layout_margin="10dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:onClick="onPrint"
                android:text="@string/print" />

            <Button
                android:id="@+id/button7"
                android:background="@drawable/button_bg_blue"
                android:layout_width="0dp"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:textStyle="bold"
                android:minHeight="@dimen/button_min_height"
                android:layout_margin="10dp"
                android:onClick="onDownload"
                android:text="@string/download" />

        </LinearLayout>

        <Button
            android:id="@+id/button8"
            android:background="@drawable/button_bg_blue"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:minHeight="@dimen/button_min_height"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:onClick="onExitTap"
            android:text="@string/exit" />

    </LinearLayout>
  </LinearLayout>
